Set post commit command

--- a/keyboards/wiiplayer2/.vscode/settings.json
+++ b/keyboards/wiiplayer2/.vscode/settings.json
@@ -8,5 +8,6 @@
             ],
             "url": "https://github.com/qmk/qmk_firmware/raw/master/data/schemas/keyboard.jsonschema"
         }
-    ]
+    ],
+    "git.postCommitCommand": "sync"
 }
