Change layered key color depending on layer

--- a/keyboards/wiiplayer2/.vscode/settings.json
+++ b/keyboards/wiiplayer2/.vscode/settings.json
@@ -9,5 +9,10 @@
             "url": "https://github.com/qmk/qmk_firmware/raw/master/data/schemas/keyboard.jsonschema"
         }
     ],
-    "git.postCommitCommand": "sync"
+    "git.postCommitCommand": "sync",
+    "files.associations": {
+        "*.gotmpl": "yaml",
+        "color.h": "c",
+        "*.inc": "c"
+    }
 }
